# zed-ftp

./: Cargo.toml  README.md  extension.json  install.sh  uninstall.sh  update.sh
extension/: extension.json
src/: lib.rs
tests/: connection_test.rs
