[package]
name = "zed_ftp"
version = "0.1.0"
edition = "2021"
description = "FTP extension for the ZED editor"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
ftp = "3.0"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
zed_extension_api = { git = "https://github.com/zed-industries/zed.git" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"